[package]
name = "solitaire-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safecoin-sdk = "=1.6.20"
safecoin-program = "=1.6.19"
solitaire = {path = "../program", features = ["no-entrypoint"]}
borsh = "0.8.1"
