[package]
name = "client"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
borsh = "0.8.1"
token-bridge = { path = "../program", features = ["client"] }
clap = "2.33.0"
rand = "0.7.3"
shellexpand = "2.1.0"
safecoin-client = "=1.6.19"
safecoin-program = "=1.6.19"
safecoin-sdk = "=1.6.20"
safecoin-cli-config = "=1.6.18"
solitaire = { path = "../../../solitaire/program" }
solitaire-client = { path = "../../../solitaire/client" }
safecoin-clap-utils = "=1.6.19"
hex = "0.4.3"
spl-token-metadata = { path = "../token-metadata" }